se ordena el envio de datos entre vistas y se realiza un actualozar continuo en time real